app/assets/stylesheets/style.scss
@import "bootstrap-sprockets";
@import "bootstrap";

// Colors

$white:       #ffffff;
$off-white:   #fafafa;
$black:       #292929;
$gray:        #888888;
$lightgray:   #c2c2c2;
$lightergray: #eaeaea;

// Spacers

.v-spacer-xs { margin-top: 10px; }
.v-spacer-sm { margin-top: 20px; }
.v-spacer-md { margin-top: 40px; }
.v-spacer-lg { margin-top: 60px; }
.v-spacer-xl { margin-top: 80px; }

// Typography

@font-face {
  font-family: 'Geomanist-Regular';
  src: asset-url("Geomanist-Regular.otf");
  font-weight: 400;
}

@font-face {
  font-family: 'Geomanist-Book';
  src: asset-url("Geomanist-Book.otf");
  font-weight: 500;
}

@font-face {
  font-family: 'Geomanist-Medium';
  src: asset-url("Geomanist-Medium.otf");
  font-weight: 700;
}

@font-face {
  font-family: 'Geomanist-Black';
  src: asset-url("Geomanist-Black.otf");
  font-weight: 900;
}

$regular: 'Geomanist-Regular', sans-serif;
$book: 'Geomanist-Book', sans-serif;
$medium: 'Geomanist-Medium', sans-serif;
$bold: 'Geomanist-Black', sans-serif;

h1, h2, h3, h4, h5, h6 {
  font-family: $medium;
}

p {
  line-height: 1.5em;
}

.-underlined {
  border-bottom: 3px solid $black;
  width: 100%;
}

// CSS

html {
  height: 100%;
}

body {
  background: #red;
  font-family: $regular;
}

.navbar {
  background-color: rgba(0,0,0,.9);
  min-height: 80px;
}

.navbar-default {
  border: none;
}

.navbar-nav, .navbar-default {
  li > a {
    color: $white !important;
    padding-left: 40px;
    padding-top: 34px;

    &:hover {
      color: $lightgray !important;
    }
  }
}

.navbar-toggle {
  border: none;
  padding-top: 25px;
}

#banner {
  background: asset-url("aok-bg.jpg") no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  width: 100%;
  height: 700px;
}

.banner-text {
  color: $white;
  margin-top: 220px;
  text-align: right;
}

#about {
  background: asset-url("about-img.jpg") no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  width: 100%;
  height: 100%;
}

.about-header, .about-text {
  color: $white;
}

#press {
  background: $off-white;
}

#gallery {
  background: asset-url("gallery-img.jpg") no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  width: 100%;
  height: 100%;
}

.partner-image {
  img { width: 100px; }
}

#footer {
  background: $black;
  height: 300px;

  .footer-nav {
    border-bottom: 1px solid #393939;
    padding-bottom: 10px;
    ul {
      padding-left: 0;
      li {
        color: $lightgray;
        display: inline;
        font-weight: 600;
        padding-left: 20px;
        text-decoration: none;
        text-transform: uppercase;

        &:first-of-type {
          padding-left: 0;
        }

        i {
          color: $gray;
          cursor: pointer;
        }
      }

      &:nth-of-type(2) {
        float: right;
      }
    }
  }

  .footer-address {
    p {
      color: $gray;
      line-height: 0.5em;
      margin-top: 20px;
    }
  }

  .footer-list {
    li > a {
      color: $lightgray;
    }
  }
}

#money-raised {
  background: $off-white;
  height: 250px;
}

.raised-text {
  padding: 40px;
}

// Solaire form

.form-group {
  margin: 30px 0;
}

.form-container {
  background: $white;
  height: 100%;
  margin: 0 auto;
  width: 450px;
}

input, select {
  border: 2px solid #f0f0f0;
  border-radius: 4px;
  color: $black;
  font-size: 14px;
  display: block;
  height: 20px;
  margin: 0 auto;
  padding: 20px 10px;
  width: 300px;
}

input::placeholder {
  color: #c2c2c2;
  font-family: 'Geomanist-Regular';
  font-size: 14px;
}

input:focus {
  background: white;
  border: 2px solid #e87e04;
  outline: none;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  transition: background-color 5000s ease-in-out 0s;
}

button {
  background: #e87e04;
  border: 2px solid #e87e04;
  border-radius: 4px;
  color: white;
  cursor: pointer;
  display: block;
  font-family: 'Geomanist-Medium', sans-serif;
  font-size: 18px;
  font-weight: 700px;
  height: 50px;
  margin: 20px auto;
  outline: none;
  text-align: center;
  transition: 0.2s linear;
  width: 300px;
}

button:hover {
  background: #d67403;
}

label {
  color: #888888;
  display: block;
  font-size: 12px;
  font-weight: 700;
  margin-bottom: 10px;
  padding-left: 37%;
}

.call-to-action {
  color: #888888;
  font-size: 20px;
  margin-top: 10px;
  text-align: center;
}

#solaire-banner {
  background: asset-url("solaire.jpg") no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  width: 100%;
  height: 700px;
}

#events {
  background: asset-url("event-jpark.jpg") no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  width: 100%;
  height: 1000px;
  max-height: 100%;

}

.event-logo {
  margin: 20 auto;

  h4, h6 {
    color: $lightergray;
  }
}

.event-presentor {
  margin-top: 250px;
  span {
    h4, h6 {
      color: $lightgray;
    }
  }
}

.event-partners {
  h6 { color: $lightergray }
  img:nth-of-type(2) {
    padding-left: 40px;
  }
}

.event-date, .event-venue {
  h4 { color: $lightergray; }
}

.dollars {
  font-family: 'Helvetica Neue', sans-serif;
  font-weight: 100;
  font-size: 36px;
}

